--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="current-rate">
     <span class="price">
-      {{tariffs[0]?.value_inc_vat}}
+      {{tariffs[0].value_inc_vat}}
     </span>
     <span class="pence">p</span>
   </div>
