--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,16 @@
 <div>
-  <div class="current-rate">
-    <span class="price">
-      {{tariffs[0].value_inc_vat}}
-    </span>
-    <span class="pence">p</span>
+  <div class="top-cont">
+    <div class="current-rate" [ngClass]="valueForMoney">
+      <span class="price">
+        {{tariffs[0]?.value_inc_vat}}
+      </span>
+      <span class="pence">p</span>
+    </div>
+    <div class="wave__container">
+      <div class="wave__circle"></div>
+      <div class="wave__circle"></div>
+      <div class="wave__circle"></div>
+    </div>
   </div>
   <div *ngFor="let tariff of tariffs" class="tariff">
     <span class="time">{{tariff.valid_from|date:'h:mm a'}}</span>
