--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-image: linear-gradient(to right, #fafafa 0%, #d8d8d8 100%);
+  margin: 0;
+  padding: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  --shadowShift: 20px;
+  --shadowBlur: 15px;
+  --circleColor: rgb(241, 243, 246);
+}
