--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,9 @@ body {
   --shadowBlur: 15px;
   --circleColor: rgb(241, 243, 246);
 }
+
+.bottom-gap {
+  margin-bottom: 100px;
+  overflow: hidden;
+  display: block;
+}
