price color pipe

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,14 +16,14 @@
   &.tariff {
     .a-tariff.active {
       top: -1.4rem;
-      background-color: green;
+      background-color: darkorange;
     }
   }
 
   &.consumption {
     .a-consumption.active {
       top: -1.4rem;
-      background-color: green;
+      background-color: red;
     }
   }
 
