--- a/src/app/tariff/tariff.component.html
+++ b/src/app/tariff/tariff.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="top-cont">
-    <div class="current-rate" [ngClass]="valueForMoney">
+    <div class="current-rate" [ngClass]="tariffs[0]?.value_inc_vat|priceColor">
       <span class="price">
         {{tariffs[0]?.value_inc_vat}}
       </span>
@@ -14,6 +14,6 @@
   </div>
   <div *ngFor="let tariff of tariffs" class="tariff">
     <span class="time">{{tariff.valid_from|date:'h:mm'}}<span class="ampm">{{tariff.valid_from|date:'a'}}</span></span>
-    <span class="price">{{tariff.value_inc_vat}} p</span>
+    <span class="price" [ngClass]="tariff.value_inc_vat|priceColor">{{tariff.value_inc_vat}} p</span>
   </div>
 </div>
