--- a/src/app/tariff/tariff.component.scss
+++ b/src/app/tariff/tariff.component.scss
@@ -129,6 +129,10 @@
 
   span {
     flex: 1;
+
+    &:last-child {
+      text-align: right;
+    }
   }
 
   .time {
@@ -138,4 +142,16 @@
       font-size: 1.3rem;
     }
   }
+}
+
+.green {
+  color: green;
+}
+
+.orange {
+  color: orange;
+}
+
+.red {
+  color: red;
 }
