--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -8,7 +8,7 @@
       <input type="text" class="inp" formControlName="electricitySerialNo" />
       <label>Gas meter MPRN</label>
       <input type="text" class="inp" formControlName="mprn" />
-      <label>Electricity meter serial no</label>
+      <label>Gas meter serial no</label>
       <input type="text" class="inp" formControlName="gasSerialNo" />
       <label>API Key</label>
       <input type="text" class="inp" formControlName="apiKey" />
