--- a/src/app/consumption/consumption.component.html
+++ b/src/app/consumption/consumption.component.html
@@ -1,3 +1,22 @@
 <h2>Consumptions</h2>
 
-{{todaysConsumption_e|json}}
+<div class="switch">
+  <button type="button" [ngClass]="{active: activeTab === 'electricity️'}"
+    (click)="activeTab ='electricity️'">⚡Electricity️</button>
+  <button type="button" [ngClass]="{active: activeTab === 'gas'}" (click)="activeTab ='gas'">🔥Gas</button>
+</div>
+
+<div *ngIf="activeTab == 'electricity️'">
+  <div *ngFor="let tariff of todaysConsumption_e" class="consumption card">
+    <span class="time">
+      <span>{{tariff.interval_start|date:'h:mm'}}</span>
+      <span class="ampm">{{tariff.interval_start|date:'a'}}</span>
+      <span class="date">{{tariff.interval_start|date:'d MMM'}}</span>
+    </span>
+    <span class="price">{{tariff.consumption}} kWh</span>
+  </div>
+</div>
+
+<div *ngIf="activeTab == 'gas'" style="text-align: center;font-size: 1.5rem; margin-top: 30px;">
+  TODO
+</div>
