--- a/src/app/consumption/consumption.component.scss
+++ b/src/app/consumption/consumption.component.scss
@@ -1,3 +1,16 @@
 h2 {
   text-align: center;
+  font-size: 2.2rem;
+}
+
+.consumption {
+  font-size: 2rem;
+
+  span {
+    flex: 1;
+
+    &:last-child {
+      text-align: right;
+    }
+  }
 }
