--- a/src/app/tariff/tariff.component.html
+++ b/src/app/tariff/tariff.component.html
@@ -12,8 +12,12 @@
       <div class="wave__circle"></div>
     </div>
   </div>
-  <div *ngFor="let tariff of tariffs" class="tariff">
-    <span class="time">{{tariff.valid_from|date:'h:mm'}}<span class="ampm">{{tariff.valid_from|date:'a'}}</span></span>
+  <div *ngFor="let tariff of tariffs" class="tariff card">
+    <span class="time">
+      <span>{{tariff.valid_from|date:'h:mm'}}</span>
+      <span class="ampm">{{tariff.valid_from|date:'a'}}</span>
+      <span class="date" *ngIf="tariff.isTomorrow">{{tariff.valid_from|date:'d MMM'}}</span>
+    </span>
     <span class="price" [ngClass]="tariff.value_inc_vat|priceColor">{{tariff.value_inc_vat}} p</span>
   </div>
 </div>
