--- a/src/app/consumption/consumption.component.scss
+++ b/src/app/consumption/consumption.component.scss
@@ -13,4 +13,12 @@ h2 {
       text-align: right;
     }
   }
+
+  .price {
+    font-size: 1.5rem;
+
+    .unit {
+      font-size: 1rem;
+    }
+  }
 }
