--- a/src/app/consumption/consumption.component.scss
+++ b/src/app/consumption/consumption.component.scss
@@ -1,3 +1,8 @@
+.container {
+  display: flex;
+  flex-direction: column
+}
+
 h2 {
   text-align: center;
   font-size: 2.2rem;
@@ -21,4 +26,14 @@ h2 {
       font-size: 1rem;
     }
   }
+}
+
+button.more {
+  font-size: 1rem;
+  margin: 20px;
+  border: none;
+  padding: 5px;
+  text-align: center;
+  background: #0a95ff;
+  color: white;
 }
