--- a/src/app/consumption/consumption.component.scss
+++ b/src/app/consumption/consumption.component.scss
@@ -8,6 +8,34 @@ h2 {
   font-size: 2.2rem;
 }
 
+.day_card {
+  .date {
+    border: 0.2rem solid rgb(88, 64, 255);
+    border-radius: 1.6rem;
+    background-color: rgb(24, 0, 72);
+    color: azure;
+    margin: 10px;
+    padding: 10px;
+    font-size: 1.8rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: stretch;
+
+    &>div {
+      flex: 1;
+
+      &:last-child {
+        text-align: right;
+      }
+    }
+
+    .sm {
+      font-size: 1.5rem;
+    }
+  }
+}
+
 .consumption {
   font-size: 2rem;
 
@@ -29,11 +57,12 @@ h2 {
 }
 
 button.more {
-  font-size: 1rem;
+  font-size: 1.4rem;
   margin: 20px;
   border: none;
-  padding: 5px;
+  padding: 10px;
   text-align: center;
-  background: #0a95ff;
+  background: rgb(240, 80, 248);
   color: white;
+  border-radius: 2rem;
 }
