--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -13,21 +13,28 @@ h2 {
 
   .inp {
     font-size: 1.5rem;
-    border-radius: 10px;
+    border-radius: 1.2rem;
     margin-bottom: 20px;
     padding: 10px;
-    border: 1px solid #707070;
+    border: 0.2rem solid rgb(88, 64, 255);
+    background: transparent;
+    color: inherit;
+
+    &:focus {
+      border-color: rgb(96, 240, 248);
+      outline: none;
+    }
   }
 
   button {
-    background-color: green;
-    color: white;
-    font-size: 2rem;
+    font-size: 1.4rem;
+    margin: 20px 0;
     border: none;
     padding: 10px;
-    border-radius: 10px;
-    box-shadow: var(--shadowShift) 0 var(--shadowBlur) rgba(55, 84, 170, 0.2), calc(var(--shadowShift) * -1) 0 var(--shadowBlur) rgb(255, 255, 255);
-    ;
+    text-align: center;
+    background: rgb(240, 80, 248);
+    color: white;
+    border-radius: 2rem;
   }
 
 }
