--- a/src/app/tariff/tariff.component.scss
+++ b/src/app/tariff/tariff.component.scss
@@ -86,8 +86,8 @@
   box-shadow: var(--shadowShift) 0 var(--shadowBlur) rgba(55 84 170 / 0.2), calc(var(--shadowShift) * -1) 0 var(--shadowBlur) rgb(65 57 195);
 
   &.green {
-    color: green;
-    text-shadow: -2px 2px 10px #00ff005e;
+    color: #00ff11;
+    text-shadow: -2px 2px 10px #00ff115e;
   }
 
   &.orange {
